# UDB-TEST

./: .mxproject  README.md  README_zh-CN.md  Template_Linux.ioc
Core/Inc/: startup_main.h
Core/Src/: main.c  startup_main.cpp  stm32f1xx_it.c  usart.c
MDK-ARM/: .clangd  Template_Linux+TemplateLinux.cbuild.yml  Template_Linux.cbuild-idx.yml  Template_Linux.cbuild-set.yml  Template_Linux.cproject.yml  Template_Linux.csolution.yml  Template_Linux.uvguix.t  Template_Linux.uvguix.念汐  Template_Linux.uvoptx  Template_Linux.uvprojx
MDK-ARM/RTE/_TemplateLinux/: RTE_Components.h
MDK-ARM/Template_Linux/: Template_Linux.axf  Template_Linux.build_log.htm  Template_Linux.hex  Template_Linux.htm  Template_Linux.lnp  Template_Linux.map  Template_Linux_Template_Linux.dep  bsp_delay.d  dma.d  gpio.d  main.d  startup_main.d  stm32f1xx_hal.d  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.d  stm32f1xx_hal_gpio_ex.d  stm32f1xx_hal_msp.d  stm32f1xx_hal_pwr.d  stm32f1xx_hal_rcc.d  stm32f1xx_hal_rcc_ex.d  stm32f1xx_hal_tim.d  stm32f1xx_hal_tim_ex.d  stm32f1xx_hal_uart.d  stm32f1xx_it.d  system_stm32f1xx.d  udb.d  usart.d
MDK-ARM/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
MDK-ARM/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
MDK-ARM/tmp/1/.cache/clangd/index/: __assert.DD9704543E2D873A.idx  __assertion_handler.562B54B21F257038.idx  __availability.D322631B1AD3D05D.idx  __config.876FCEA733A8FE65.idx  __verbose_abort.E217185E389E29FA.idx  bsp_delay.cpp.47E2B8A0213534AA.idx  bsp_delay.h.BDDFC2C154050053.idx  cmsis_compiler.h.899629E1FE60E2F2.idx  cmsis_gcc.h.632E88DB4F13D165.idx  cmsis_version.h.A569EDAE0B61AB26.idx  core_cm3.h.09190888EEF3F307.idx  cstdint.6969DC9FC6B48339.idx  dma.c.B168886B9A4EBA2F.idx  dma.h.BA34ACDC4C511072.idx  gpio.c.E1F97ACDC8D81DA8.idx  gpio.h.1E1B094CBA9B8EC0.idx  main.c.4065A19DBF8E46A2.idx  main.h.CF2DCDD2529B4C92.idx  startup_main.cpp.A3D44A3E75687020.idx  startup_main.h.8A87109106487663.idx  stdbool.h.77FD79BA8FBB9C1B.idx  stdbool.h.D99D67E1FBB5323D.idx  stddef.h.40E35682AB6FA054.idx  stddef.h.B4D6B1C77D313714.idx  stdint.h.4ACFBD2DB922E4D7.idx  stdint.h.961E9173C0515671.idx  stm32_hal_legacy.h.66E6F7F94F481464.idx  stm32f103xb.h.EE20417EC32C4CA7.idx  stm32f1xx.h.541B7EB0991F818E.idx  stm32f1xx_hal.c.A6F45E4167A5583C.idx  stm32f1xx_hal.h.0CBBB83B84B0D9D4.idx  stm32f1xx_hal_conf.h.B7EF73C4FB283ADC.idx  stm32f1xx_hal_cortex.c.83E470745798A1A9.idx  stm32f1xx_hal_cortex.h.5294F283F662E928.idx  stm32f1xx_hal_def.h.04A00985B3CBBC6C.idx  stm32f1xx_hal_dma.c.5146DD0C95BC5498.idx  stm32f1xx_hal_dma.h.E4D16AF89FD4633D.idx  stm32f1xx_hal_dma_ex.h.10D30B0B32DC7E55.idx  stm32f1xx_hal_exti.c.6F3BB6267DD35E64.idx  stm32f1xx_hal_exti.h.A009BFA80DD817B0.idx  (+30 more)
MDK-ARM/tmp/Template_Linux+TemplateLinux/: CMakeLists.txt  groups.cmake  toolchain.cmake
MDK-ARM/tmp/Template_Linux+TemplateLinux/src/Template_Linux+TemplateLinux-stamp/: Template_Linux+TemplateLinux-configure-.cmake  Template_Linux+TemplateLinux-source_dirinfo.txt
MDK-ARM/tmp/Template_Linux+TemplateLinux/tmp/: Template_Linux+TemplateLinux-cfgcmd.txt  Template_Linux+TemplateLinux-mkdirs.cmake
applications/Inc/: udb.h
applications/Src/: udb.cpp
bsp/boards/Inc/: struct_typedef.h
